Se agrega el codigo para el footer

--- a/index.html
+++ b/index.html
@@ -133,6 +133,16 @@
         #resultado.incorrecto {
             color: red;
         }
+
+        footer {
+            margin-top: 20px;
+            padding: 10px;
+            background: #2c3e50;
+            color: white;
+            font-size: 22px;
+            text-align: center;
+            border-radius: 8px;
+        }
     </style>
 </head>
 
@@ -333,6 +343,12 @@
             document.getElementById("inicio").style.display = "block";
         }
     </script>
+
+    <footer>
+        <p>Asignatura: Historia</p>
+        <p>Estudiantes: Luciana Perez Osorio y Emiliana Ceballos Rubio</p>
+        <p>Docente: Daniel Naranjo</p>
+    </footer>
 </body>
 
 </html>
