Se agrega funcionalidad para reintentos en preguntas erradas

--- a/index.html
+++ b/index.html
@@ -38,14 +38,16 @@
 
         .imagenes {
             display: flex;
+            flex-wrap: wrap;
             justify-content: center;
             gap: 15px;
             margin: 20px 0;
         }
 
         .imagenes img {
-            width: 300px;
-            height: 300px;
+            width: 100%;
+            max-width: 250px;
+            height: 250px;
             object-fit: cover;
             border: 2px solid #333;
             border-radius: 8px;
@@ -53,16 +55,15 @@
         }
 
         .imagen-item {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            width: 300px;
-            /* mismo tamaño que la imagen */
+            text-align: center;
+            width: 100%;
+            max-width: 250px;
+            /* Igual que la imagen */
         }
 
         .imagen-item p {
             margin-top: 8px;
-            font-size: 28px;
+            font-size: 18px;
             font-weight: bold;
             color: #222;
         }
@@ -85,6 +86,8 @@
             color: white;
             font-size: 30px;
             transition: 0.3s;
+            width: 90%;
+            max-width: 500px;
         }
 
         button:hover {
@@ -142,6 +145,32 @@
             font-size: 22px;
             text-align: center;
             border-radius: 8px;
+        }
+
+        /* 🔹 Media Query: pantallas pequeñas (menos de 600px) */
+        @media (max-width: 600px) {
+            body {
+                padding: 10px;
+            }
+
+            h1 {
+                font-size: 22px;
+            }
+
+            #pregunta {
+                font-size: 18px;
+            }
+
+            .imagen-item p {
+                font-size: 16px;
+            }
+
+            button {
+                font-size: 24px;
+                padding: 18px;
+                width: 100%;
+                max-width: none;
+            }
         }
     </style>
 </head>
@@ -312,7 +341,7 @@
             });
         }
 
-        function validarRespuesta(respuestaSeleccionada) {
+        /*function validarRespuesta(respuestaSeleccionada) {
             const resultadoDiv = document.getElementById("resultado");
             resultadoDiv.style.display = "block";
 
@@ -327,7 +356,50 @@
 
             rondaActual++;
             setTimeout(mostrarRonda, 2000);
+        }*/
+        let intentos = 0; // 👈 variable global para contar intentos por ronda
+
+        function validarRespuesta(respuestaSeleccionada) {
+            const resultadoDiv = document.getElementById("resultado");
+            resultadoDiv.style.display = "block";
+
+            if (respuestaSeleccionada === preguntas[rondaActual].respuesta) {
+                resultadoDiv.textContent = "¡Correcto! ✅";
+                resultadoDiv.className = "correcto";
+
+                puntaje++;
+                intentos = 0; // reiniciar intentos para la siguiente ronda
+                rondaActual++;
+                setTimeout(mostrarRonda, 2000);
+            } else {
+                intentos++;
+                if (intentos === 1) {
+                    // Primer error → permitir reintento
+                    resultadoDiv.textContent = "Incorrecto ❌. Intenta de nuevo.";
+                    resultadoDiv.className = "incorrecto";
+
+                    const reintentoBtn = document.createElement("button");
+                    reintentoBtn.textContent = "Reintentar";
+                    reintentoBtn.onclick = () => {
+                        resultadoDiv.style.display = "none";
+                        mostrarPregunta(); // vuelve a mostrar la misma pregunta
+                    };
+
+                    resultadoDiv.innerHTML = resultadoDiv.textContent + "<br>";
+                    resultadoDiv.appendChild(reintentoBtn);
+
+                } else {
+                    // Segundo error → mostrar la respuesta correcta y avanzar
+                    resultadoDiv.textContent = "Incorrecto ❌. Respuesta correcta: " + preguntas[rondaActual].respuesta;
+                    resultadoDiv.className = "incorrecto";
+
+                    intentos = 0; // reiniciar para la siguiente ronda
+                    rondaActual++;
+                    setTimeout(mostrarRonda, 2500);
+                }
+            }
         }
+
 
         function mostrarFinal() {
             document.getElementById("juego").style.display = "none";
